Fixing a nowrap bug on the modal

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -81,5 +81,7 @@
  p.pokemon-settings i.active {
      color: #666;
  }
-     color: #666;
+
+ .setting-description {
+    white-space: normal;
  }
